DigicielFull/force-app/main/default/objects/Case_Owner_History__c/Case_Owner_History__c.object-meta.xml
<CustomObject>
    <label>Case Owner History</label>
    <nameField>
        <displayFormat>COH-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Owner Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>