DigicielFull/force-app/main/default/objects/Case_Owner_History__c/fields/Case_Number_Changed__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Number Changed</label>
    <type>Checkbox</type>
</CustomField>