DigicielFull/force-app/main/default/objects/Case_Owner_History__c/fields/Case_Number_When_Created__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_When_Created__c</fullName>
    <label>Case Number When Created</label>
    <length>20</length>
    <type>Text</type>
</CustomField>