DigicielFull/force-app/main/default/objects/Case_Owner_History__c/fields/Changed_From__c.field-meta.xml
<CustomField>
    <fullName>Changed_From__c</fullName>
    <label>Changed From</label>
    <length>20</length>
    <type>Text</type>
</CustomField>