DigicielFull/force-app/main/default/objects/Case_Owner_History__c/fields/Elapsed_Time_Total_Mins__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time_Total_Mins__c</fullName>
    <formula>if(
isblank(Exit_Time__c)
,((Now()-Entry_Time__c)*1440 )
,((Exit_Time__c - Entry_Time__c)*1440 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Time (Total Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>