DigicielFull/force-app/main/default/objects/Case_Owner_History__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>If(
BEGINS(OwnerId, &quot;005&quot;)
,Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName
,Owner:Queue.QueueName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>