DigicielFull/force-app/main/default/objects/Case_Owner_History__c/fields/Previous_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Case_Number__c</fullName>
    <label>Previous Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>