DigicielFull/force-app/main/default/objects/Case_Owner_History__c/listViews/PNG_FieldSupport_Case_Owner_History.listView-meta.xml
<ListView>
    <fullName>PNG_FieldSupport_Case_Owner_History</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG - Field Support</label>
    <queue>PNG_FieldSupport</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>