DigicielFull/force-app/main/default/objects/Case_Owner_History__c/listViews/PNG_GroupCFO_Case_Owner_History.listView-meta.xml
<ListView>
    <fullName>PNG_GroupCFO_Case_Owner_History</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG - Group CFO</label>
    <queue>PNG_GroupCFO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>