DigicielFull/force-app/main/default/objects/Case_Owner_History__c/listViews/PNG_ICT_Implementation_Operations_Case_Owner_History.listView-meta.xml
<ListView>
    <fullName>PNG_ICT_Implementation_Operations_Case_Owner_History</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG - ICT Implementation &amp; Operations</label>
    <queue>PNG_ICT_Implementation_Operations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>