DigicielFull/force-app/main/default/objects/Case_Owner_History__c/listViews/PNG_ICTTechnical_Case_Owner_History.listView-meta.xml
<ListView>
    <fullName>PNG_ICTTechnical_Case_Owner_History</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG - ICT Technical</label>
    <queue>PNG_ICTTechnical</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>