DigicielFull/force-app/main/default/objects/Case_Owner_History__c/listViews/PNG_IP_Team_Case_Owner_History.listView-meta.xml
<ListView>
    <fullName>PNG_IP_Team_Case_Owner_History</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG - IP Team</label>
    <queue>PNG_IP_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>