DigicielFull/force-app/main/default/objects/Case_Owner_History__c/listViews/PNG_Level1SupportQueue_Case_Owner_History.listView-meta.xml
<ListView>
    <fullName>PNG_Level1SupportQueue_Case_Owner_History</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG - Level 1 Support</label>
    <queue>PNG_Level1SupportQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>