DigicielFull/force-app/main/default/objects/Case_Owner_History__c/listViews/PNG_Managed_Services_Case_Owner_History.listView-meta.xml
<ListView>
    <fullName>PNG_Managed_Services_Case_Owner_History</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG - Managed Services</label>
    <queue>PNG_Managed_Services</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>