DigicielFull/force-app/main/default/objects/Case_Owner_History__c/listViews/PNG_Mobile_Reconciliation_Case_Owner_History.listView-meta.xml
<ListView>
    <fullName>PNG_Mobile_Reconciliation_Case_Owner_History</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG - Mobile Reconciliation</label>
    <queue>PNG_Mobile_Reconciliation</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>