DigicielFull/force-app/main/default/objects/Case_Owner_History__c/listViews/PNG_MobileSalesOperations_Case_Owner_History.listView-meta.xml
<ListView>
    <fullName>PNG_MobileSalesOperations_Case_Owner_History</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG - Mobile Sales Operations</label>
    <queue>PNG_MobileSalesOperations</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>