DigicielFull/force-app/main/default/objects/Case_Owner_History__c/listViews/PNG_Postpaid_TV_Billing_Case_Owner_History.listView-meta.xml
<ListView>
    <fullName>PNG_Postpaid_TV_Billing_Case_Owner_History</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG - Postpaid TV Billing</label>
    <queue>PNG_Postpaid_TV_Billing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>